# lanbeam

./: .gitignore  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  biome.jsonc  index.html  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  consts.rs  error.rs  exif.rs  identity.rs  lib.rs  main.rs  partials.rs  paths.rs  protocol.rs  sanitize.rs  settings.rs  share.rs  state.rs  transfer.rs  tray.rs  trust.rs
src-tauri/src/discovery/: interfaces.rs  mod.rs  packet.rs  socket.rs
src-tauri/src/transport/: frame.rs  mod.rs  noise.rs
src-tauri/tests/: auto_accept.rs  bye_session.rs  duplicate_inflight.rs  pair_then_text.rs  pairing.rs  quick_text.rs  resume_organize.rs
src/bridge/: api.test.ts  api.ts
src/components/: AppShell.tsx  BrandMark.tsx  ConflictModal.test.tsx  ConflictModal.tsx  DragOverlay.tsx  FpAlertModal.test.tsx  FpAlertModal.tsx  Header.test.tsx  Header.tsx  IncomingStack.test.tsx  IncomingStack.tsx  InputContextMenu.test.tsx  InputContextMenu.tsx  LicenseModal.tsx  PairModal.test.tsx  PairModal.tsx  Qr.tsx  QuickTextModal.test.tsx  QuickTextModal.tsx  SendModal.test.tsx  SendModal.tsx  ShareModal.test.tsx  ShareModal.tsx  Sidebar.test.tsx  Sidebar.tsx  Toast.tsx  TransferDetail.tsx  WindowControls.test.tsx  WindowControls.tsx  trayContract.test.ts  ui.test.tsx  ui.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/lib/: browserShortcuts.test.ts  browserShortcuts.ts  deepLink.test.ts  deepLink.ts  demo.test.ts  demo.ts  filecat.test.ts  filecat.ts  format.test.ts  format.ts  licenses.ts  radar.test.ts  radar.ts  sendops.test.ts  sendops.ts  sound.ts  store.test.ts  store.ts  trustDot.test.ts  trustDot.ts  uiZoom.test.ts  uiZoom.ts
src/pages/: DevicesPage.test.tsx  DevicesPage.tsx  InboxPage.test.tsx  InboxPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  TransfersPage.test.tsx  TransfersPage.tsx  TrustedPage.test.tsx  TrustedPage.tsx
src/test/: render.tsx  setup.ts
