[package]
name = "lanbeam"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lanbeam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `tray-icon` (M5.3): system tray + close-to-tray; the feature only takes
# effect on desktop targets, so no per-target dependency split is needed.
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
# Quick-text (M7.3): write an incoming text to this machine's clipboard when
# the receiver opted in. All-platform (no desktop-only split), so it lives here
# rather than in the per-target block below.
tauri-plugin-clipboard-manager = "2"

# ── M1: identity + discovery ──
snow = "0.9"
keyring = { version = "3", features = ["windows-native"] }
base64 = "0.22"
zeroize = "1"
socket2 = "0.5"
if-addrs = "0.13"
# Strip the Windows `\\?\` verbatim prefix from canonicalized download paths so
# stored/displayed paths stay copy-pasteable (already in the tree via Tauri).
dunce = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "macros", "fs", "io-util"] }
# `CancellationToken` for graceful transfer cancellation (M6.1); the chunk
# loops `select!` on it so a cancel wins over the in-flight wire op. `io`
# (M8.1a): `ReaderStream` streams a shared file into the axum response body.
tokio-util = { version = "0.7", features = ["rt", "io"] }
uuid = { version = "1", features = ["v4"] }

# ── M4: logging + diagnostics ──
log = "0.4"
tauri-plugin-log = "2"

# ── M6.3: integrity verification ──
# Stream-hash files on the sender and re-hash on the receiver so silent
# in-flight corruption is caught before a file is delivered.
sha2 = "0.10"

# ── M9.1: EXIF/metadata stripping on send ──
# Container-level segment/chunk surgery (NOT decode + re-encode): removes the
# EXIF (and ICC) blocks from JPEG/PNG/WebP while leaving the pixel data byte-
# for-byte untouched. Formats it can't parse pass through unstripped.
img-parts = "0.3"

# ── M8.1: browser-receive HTTP fallback ──
# A one-shot LAN share server. axum 0.7 matches the workspace's hyper 1.x /
# http 1.x / tokio 1.x already in the tree; files stream via tokio::fs +
# tokio-util's `ReaderStream` (the `io` feature added above), so no tower-http
# is needed. Pinned to 0.7 DELIBERATELY: 0.8 renamed path params from `:name`
# to `{name}`, which the share routes rely on.
axum = "0.7"
# OS CSPRNG for the unguessable share token (base64url of its raw bytes). 0.4
# aligns with the getrandom 0.4.x already resolved in the tree (via tempfile /
# uuid) — so it adds no extra copy — and picks up 0.4.2's Windows `ProcessPrng`
# return-value check, so a failed OS RNG call is detected rather than silently
# ignored. Note the 0.3 API rename: the fill fn is `getrandom::fill` (was
# `getrandom::getrandom`).
getrandom = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
# ── M5.4/M5.5: system integration (desktop-only surfaces) ──
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
# Deep links (lanbeam://pair): let a pairing link launch/focus LanBeam and
# pre-fill the join form. The installer registers the scheme; a running instance
# gets the URL via single-instance argv (Windows/Linux) or on_open_url (macOS).
tauri-plugin-deep-link = "2"

[dev-dependencies]
proptest = "1"
# `test` unlocks tauri's MockRuntime so transfer tests can drive the REAL
# `handle_incoming` (events + state) without a window/event loop.
tauri = { version = "2", features = ["test"] }

# ── Release profile: optimize the shipped binary for SIZE ──────────────────
# The default release profile optimizes for speed and keeps debug symbols; for
# a LAN transfer tool the bottleneck is the network/disk, not CPU, so trading a
# little compute for a much smaller installer is the right call.
#   opt-level "z"     — optimize hard for size. MEASURED 1.3 MB (~14%) smaller
#                       than "s" on this dependency tree. The usual "z" downside
#                       (less autovectorization) does NOT bite here: the crypto
#                       hot paths (sha2's SHA-256, snow's ChaCha) run their own
#                       runtime-selected SIMD/asm backends that our crate's
#                       opt-level barely touches, and LAN transfer is network/
#                       disk-bound, not CPU-bound. "z" only shrinks the non-hot
#                       glue (chunk loops, serde, state machine).
#   lto = true        — link-time optimization across crates (size + some speed)
#   codegen-units = 1 — one unit = better cross-function optimization (slower
#                       compile, smaller output)
#   strip = true      — drop debug symbols from the final binary (a large win)
# NOTE: panic is intentionally LEFT as unwind (not "abort"): the app spawns many
# per-connection / discovery / transfer tokio tasks, and unwind lets tokio
# isolate a panicking task instead of aborting the whole process.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

